[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[workspace]
members = [
    # "contracts/eosio-assert",
    # "contracts/eosio-bios",
    # "contracts/eosio-forum",
    # "contracts/eosio-msig",
    # "contracts/eosio-system",
    "contracts/eosio-token",
    "contracts/eosio-wrap",
    "crates/eosio",
    "crates/eosio-macros",
    "crates/eosio-macros-internal",
    "crates/eosio-numstr",
    "crates/eosio-cdt",
    "crates/eosio-cdt-sys",
    # "eosio-cli",
    # "eosio-rpc",
    "examples/addressbook",
    "examples/hello-bare",
    "examples/hello",
    "examples/tictactoe",
    "scripts",
]
