[package]
name = "eosio-cdt-macros-internal"
version = "0.1.0"
authors = ["Liam Curry <liam@sagan.software>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15", features = ["full", "fold"] }
proc-macro2 = "0.4"
proc-macro-hack = "0.5"
quote = "0.6"

[features]
internal = []
contract = []
