[package]
name = "eosio-core-derive"
version = "0.2.1"
authors = ["Liam Curry <liam@sagan.software>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Macros for automatically deriving EOSIO byte traits."
keywords = ["eos", "eosio", "blockchain", "crypto", "dapp"]
categories = [
    "cryptography::cryptocurrencies",
    "encoding",
    "parsing"
]
repository = "https://github.com/sagan-software/eosio-rust"
homepage = "https://sagan-software.github.io/eosio-rust/"
documentation = "https://sagan-software.github.io/eosio-rust/eosio-core-derive/"
readme = "README.md"
include = [
    "/Cargo.toml",
    "/src/**/*.rs",
    "/README.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT"
]

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "sagan-software/eosio-rust", branch = "master" }

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = "0.15"
proc-macro2 = "0.4"
quote = "0.6"

[dev-dependencies]
eosio-core = { version = "0.2", path = "../eosio-core", default-features = false }

[features]
default = []
internal-use-only-root-path-is-eosio = []