[package]
name = "eosio-core-macros-internal"
version = "0.2.1"
authors = ["Liam Curry <liam@sagan.software>"]
license = "MIT OR Apache-2.0"
description = "Internal use only."
edition = "2018"
keywords = ["eos", "eosio", "blockchain", "crypto", "dapp"]
categories = ["development-tools::procedural-macro-helpers"]
repository = "https://github.com/sagan-software/eosio-rust"
homepage = "https://sagan-software.github.io/eosio-rust/"
documentation = "https://sagan-software.github.io/eosio-rust/eosio-core-macros-internal/"
readme = "README.md"
include = [
    "/Cargo.toml",
    "/src/**/*.rs",
    "/README.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT"
]

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = "0.15"
proc-macro2 = "0.4"
proc-macro-hack = "0.5"
quote = "0.6"
eosio-core = { version = "0.2", path = "../eosio-core" }
