[package]
name = "eosio-rpc"
version = "0.1.0"
authors = ["Liam Curry <liam@sagan.software>"]
edition = "2018"

[dependencies]
cfg-if = "0.1.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
eosio = { path = "../eosio" }
eosio-abi = { path = "../eosio-abi" }
futures = "0.1.20"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }
js-sys = { version = "0.3.5", optional = true }
wasm-bindgen-futures = { version = "0.3.5", optional = true }
hyper = { version = "0.12", optional = true }
hyper-tls = { version = "0.3", optional = true }
stdweb = { version = "0.4.14", optional = true }

[dependencies.web-sys]
version = "0.3.4"
optional = true
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]

[features]
use-web-sys = ["wasm-bindgen", "wasm-bindgen-futures", "js-sys", "web-sys"]
use-hyper = ["hyper", "hyper-tls"]
use-stdweb = ["stdweb"]