[package]
name = "eosio"
version = "0.2.0"
authors = ["Liam Curry <liam@sagan.software>"]
license = "MIT OR Apache-2.0"
description = "Library for building EOSIO smart contracts"
edition = "2018"
keywords = ["eos", "eosio", "blockchain", "crypto", "dapp"]
categories = [
    "api-bindings",
    "cryptography::cryptocurrencies",
    "data-structures",
    "external-ffi-bindings",
    "wasm"
]
repository = "https://github.com/sagan-software/eosio-rust"
homepage = "https://sagan-software.github.io/eosio-rust/"
documentation = "https://sagan-software.github.io/eosio-rust/eosio/"

[features]
default = ["cdt"]
cdt = ["eosio-cdt", "eosio-cdt-macros"]

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "sagan-software/eosio-rust", branch = "master" }

[dependencies]
eosio-core = { path = "../eosio-core", features = ["internal-use-only-root-path-is-eosio"] }
eosio-core-macros = { path = "../eosio-core-macros" }
eosio-cdt = { path = "../eosio-cdt", optional = true }
eosio-cdt-macros = { path = "../eosio-cdt-macros", optional = true, features = ["internal-use-only-root-path-is-eosio"] }
