[package]
name = "eosio_cli"
version = "0.1.0"
authors = ["Liam Curry <liam@sagan.software>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "eosio"
path = "src/main.rs"
doc = false

[dependencies]
clap = "2.32.0"
futures = "0.1.20"
eosio = { path = "../eosio" }
eosio_rpc = { path = "../eosio_rpc", features = ["use-hyper"] }
hyper = { version = "0.12" }
serde_json = "1.0"
