[package]
name = "eosio_macros"
version = "0.1.0"
authors = ["Liam Curry <liam@sagan.software>"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15.4", features = ["full", "fold"] }
proc-macro2 = "0.4"
quote = "0.6"
eosio_sys = { path = "../eosio_sys", version = "0.1" }
eosio_types = { path = "../eosio_types", version = "0.1" }

[[tests]]
name = "tests"
