[package]
name = "eosio_macros"
version = "0.2.0"
authors = ["Liam Curry <liam@sagan.software>"]
license = "MIT/Apache-2.0"
description = "Library for building EOSIO smart contracts"
edition = "2018"

[features]
internal = ["eosio_macros_impl/internal"]
contract = ["eosio_macros_impl/contract"]

[dependencies]
eosio_macros_impl = { path = "../eosio_macros_impl" }
proc-macro-hack = "0.5"
proc-macro-nested = "0.1"
