[package]
name = "eosio_numstr"
version = "0.2.2"
authors = ["Liam Curry <liam@sagan.software>"]
license = "MIT OR Apache-2.0"
description = "Functions for encoding/parsing EOSIO names and symbols."
edition = "2018"
keywords = ["eos", "eosio", "blockchain", "crypto", "dapp"]
categories = [
    "algorithms",
    "cryptography::cryptocurrencies",
    "encoding",
    "parsing",
    "value-formatting"
]
repository = "https://github.com/sagan-software/eosio-rust"
homepage = "https://sagan-software.github.io/eosio-rust/"
documentation = "https://sagan-software.github.io/eosio-rust/eosio_numstr/"
readme = "README.md"
include = [
    "Cargo.toml",
    "src/**/*.rs",
    "README.md",
    "LICENSE-APACHE",
    "LICENSE-MIT"
]

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "sagan-software/eosio-rust", branch = "master" }

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "bench_main"
harness = false
