[package]
name = "eosio_numstr_macros_impl"
version = "0.2.0"
authors = ["Liam Curry <liam@sagan.software>"]
license = "MIT/Apache-2.0"
description = "Procedural macros for EOSIO smart contract development"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "0.15"
proc-macro2 = "0.4"
proc-macro-hack = "0.5"
quote = "0.6"
eosio_numstr = { version = "0.2", path = "../eosio_numstr" }
