[package]
name = "eosio_sys"
version = "0.1.0"
authors = ["Liam Curry <liam@sagan.software>"]
license = "MIT/Apache-2.0"
description = "System bindings for EOSIO blockchains"

[lib]
test = false
doctest = false

[dependencies]
memchr = { version = "2.0", default-features = false }

[features]
default = ["std"]
std = []
alloc = []
