[package]
name = "eosio_types"
version = "0.1.0"
authors = ["Liam Curry <liam@sagan.software>"]

[dependencies]
eosio_bytes = { path = "../eosio_bytes", version = "0.1" }
eosio_derives = { path = "../eosio_derives", version = "0.1", default-features = false }

[features]
default = ["std"]
std = []
alloc = []