[package]
name = "eosio-token"
version = "0.1.0"
authors = ["Liam Curry <liam@sagan.software>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
eosio = { path = "../../crates/eosio" }
eosio-cdt = { path = "../../crates/eosio-cdt" }
serde = { version = "1.0", optional = true, features = ["derive"] }
