[package]
name = "eosio_assert"
version = "0.1.0"
authors = ["Liam Curry <liam@sagan.software>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
eosio = { version = "0.3.1", path = "../../crates/eosio" }
eosio_cdt = { version = "0.3.1", path = "../../crates/eosio_cdt" }