[package]
name = "eosio-cdt-sys"
version = "0.3.0"
authors = ["Liam Curry <liam@sagan.software>"]
license = "MIT OR Apache-2.0"
description = "Low-level FFI bindings for EOSIO smart contract development."
edition = "2018"
keywords = ["eos", "eosio", "blockchain", "crypto", "dapp"]
categories = [
    "cryptography::cryptocurrencies",
    "external-ffi-bindings",
    "wasm"
]
repository = "https://github.com/sagan-software/eosio-rust"
homepage = "https://sagan-software.github.io/eosio-rust/"
documentation = "https://sagan-software.github.io/eosio-rust/eosio-cdt-sys/"
readme = "README.md"
include = [
    "/Cargo.toml",
    "/src/**/*.rs",
    "/README.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT"
]

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "sagan-software/eosio-rust", branch = "master" }

[features]
default = []
mock = []