[package]
name = "eosio-cli"
version = "0.1.0"
authors = ["Liam Curry <liam@sagan.software>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "eosrs"
path = "src/main.rs"
doc = false

[dependencies]
clap = "2.32.0"
# futures = "0.1.20"
eosio = { path = "../eosio" }
# eosio-rpc = { path = "../eosio-rpc", features = ["use-hyper"] }
# hyper = { version = "0.12" }
# serde_json = "1.0"
quote = "1.0"

[dependencies.syn]
version = "1.0"
default-features = false
features = [
    "full",
    "parsing",
    "visit",
    "clone-impls",
    "extra-traits",
]