[package]
name = "eosio-macros"
version = "0.2.1"
authors = ["Liam Curry <liam@sagan.software>"]
license = "MIT OR Apache-2.0"
description = "Macros for creating compile-time EOSIO names and symbols."
edition = "2018"
keywords = ["eos", "eosio", "blockchain", "crypto", "dapp"]
categories = [
    "cryptography::cryptocurrencies",
    "encoding",
    "parsing",
    "value-formatting"
]
repository = "https://github.com/sagan-software/eosio-rust"
homepage = "https://sagan-software.github.io/eosio-rust/"
documentation = "https://sagan-software.github.io/eosio-rust/eosio-core-macros/"
readme = "README.md"
include = [
    "/Cargo.toml",
    "/src/**/*.rs",
    "/README.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT"
]

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "sagan-software/eosio-rust", branch = "master" }

[dependencies]
eosio-macros-internal = { path = "../eosio-macros-internal" }
proc-macro-hack = "0.5"
proc-macro-nested = "0.1"

[dev-dependencies]
trybuild = "1.0"